--- a/Validacao_modelos_clusterizacao_pd.ipynb
+++ b/Validacao_modelos_clusterizacao_pd.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "40b3a301",
+   "metadata": {},
+   "source": [
+    "# **Identificação**\n",
+    "**Nome:** Leonardo Jose da Cunha <br>\n",
+    "**Repositório:** https://github.com/ljcunha/Algoritmo_clusterizacao <br>\n",
+    "**Notebook Jupyter:** Validacao_modelos_Clusterizacao_pd.ipynb <br>\n",
+    "**Fullpath:** https://github.com/ljcunha/Algoritmo_clusterizacao/Validacao_modelos_Clusterizacao_pd.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5c0ec00a",
    "metadata": {},
    "source": [
